--- a/public/stylesheets/flags.css
+++ b/public/stylesheets/flags.css
@@ -19,8 +19,8 @@
 .gre.small {
 	background:url(../images/flags/gre-small.png) no-repeat;
 }
-.ing.small {
-	background:url(../images/flags/ing-small.png) no-repeat;
+.eng.small {
+	background:url(../images/flags/eng-small.png) no-repeat;
 }
 .usa.small {
 	background:url(../images/flags/usa-small.png) no-repeat;
@@ -52,8 +52,8 @@
 	background:url(../images/flags/aus-medium.png) no-repeat;
 }
 
-.ing.medium {
-	background:url(../images/flags/ing-medium.png) no-repeat;
+.eng.medium {
+	background:url(../images/flags/eng-medium.png) no-repeat;
 }
 .usa.medium {
 	background:url(../images/flags/usa-medium.png) no-repeat;
