--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,37 +5,7 @@
 
 = render :partial => "next_games"
 
-#most-predicted
-  %h3 los más pronosticados
-  .container
-    %ul
-      %li
-        %a{:href => "#"}
-          .flag.ury.small uru
-          .flag.arg.small usa
-          %p 20 pronósticos
-      %li
-        %a{:href => "#"}
-          .flag.ury.small uru
-          .flag.arg.small usa
-          %p 20 pronóstico
-      %li
-        %a{:href => "#"}
-          .flag.ury.small uru
-          .flag.arg.small usa
-          %p 20 pronóstico
-      %li.last
-        %a{:href => "#"}
-          .flag.ury.small uru
-          .flag.arg.small usa
-          %p 20 pronóstico
-    .clear
-  .nav
-    %a.prev.arrow{:href => "#"}
-    %a.next.arrow{:href => "#"}
-    %a.predict.button{:href => "#"} Deja tu pronóstico
-    .clear
-
+= render :partial => "most_predictions"
 
 
 #last-predicted
