--- a/public/stylesheets/flags.css
+++ b/public/stylesheets/flags.css
@@ -75,7 +75,7 @@
 .che.medium {
 	background:url(../images/flags/che-medium.png) no-repeat;
 }
-.hnd.small {
+.hnd.medium {
 	background:url(../images/flags/hnd-medium.png) no-repeat;
 }
 
