--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -4,7 +4,7 @@
       = form.input :title, :label => "Título"
       = form.input :content, :label => "Contenido", :input_html => {:class => "tinymce"}
       = form.input :published_at, :label => "Fecha publicación"
-      = form.input :account, :label => "Autor"
+      = form.input :admin, :label => "Autor"
   
     - form.buttons do
       = form.commit_button 'Grabar',:button_html => { :class => "submit" }
