--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -11,74 +11,8 @@
 #last-predicted
   %h3 últimos pronósticos
   %ul
-    %li.odd
-      .meta
-        %img.avatar{:alt => "", :height => "51", :src => "/images/avatar.jpg", :width => "51"}/
-        %p Alvaro
-        %p.title Lord del futbol
-      %table{:cellpadding => "0", :cellspacing => "0"}
-        %tbody
-          %tr.header
-            %td.first Partido
-            %td
-              .flag.ury.small uru
-            %td
-              .flag.arg.small arg
-          %tr
-            %td.first goles
-            %td.win 4
-            %td 2
-    %li
-      .meta
-        %img.avatar{:alt => "", :height => "51", :src => "/images/avatar.jpg", :width => "51"}/
-        %p Alvaro
-        %p.title Lord del futbol
-      %table{:cellpadding => "0", :cellspacing => "0"}
-        %tbody
-          %tr.header
-            %td.first Partido
-            %td
-              .flag.ury.small uru
-            %td
-              .flag.arg.small arg
-          %tr
-            %td.first goles
-            %td 4
-            %td.win 2
-    %li.odd
-      .meta
-        %img.avatar{:alt => "", :height => "51", :src => "/images/avatar.jpg", :width => "51"}/
-        %p Alvaro
-        %p.title Lord del futbol
-      %table{:cellpadding => "0", :cellspacing => "0"}
-        %tbody
-          %tr.header
-            %td.first Partido
-            %td
-              .flag.ury.small uru
-            %td
-              .flag.arg.small arg
-          %tr
-            %td.first goles
-            %td.win 4
-            %td 2
-    %li
-      .meta
-        %img.avatar{:alt => "", :height => "51", :src => "/images/avatar.jpg", :width => "51"}/
-        %p Alvaro
-        %p.title Lord del futbol
-      %table{:cellpadding => "0", :cellspacing => "0"}
-        %tbody
-          %tr.header
-            %td.first Partido
-            %td
-              .flag.ury.small uru
-            %td
-              .flag.arg.small arg
-          %tr
-            %td.first goles
-            %td 4
-            %td.win 2
+    = render :partial => "last_prediction", :collection=>@predictions
+
   .clear
 
 
