Changed published to published_at

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -42,40 +42,40 @@
     %ul.ranking
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4 alvaro pereyra
-        %p 20 pronósticos
-        %p 18 aciertos
-        %p.title Lord del Futbol
+        %h4 = ""
+        %p 3 pronósticos
+        %p 0 aciertos
+        %p.title novato
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4 alvaro pereyra
-        %p 20 pronósticos
-        %p 18 aciertos
-        %p.title lord del futbol
+        %h4 = ""
+        %p 2 pronósticos
+        %p 0 aciertos
+        %p.title novato
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4 alvaro pereyra
-        %p 20 pronósticos
-        %p 18 aciertos
-        %p.title lord del futbol
+        %h4 = ""
+        %p 2 pronósticos
+        %p 0 aciertos
+        %p.title novato
   #punteros
     %h3 los punteros
     %ul.ranking
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4 alvaro pereyra
-        %p 42 puntos
-        %p.title Lord del Futbol
+        %h4
+        %p 3 puntos
+        %p.title novato
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4 alvaro pereyra
-        %p 0 puntos
-        %p.title Lord del Futbol
+        %h4 
+        %p 2 puntos
+        %p.title novato
       %li
         %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
-        %h4 alvaro pereyra
-        %p 0 puntos
-        %p.title Lord del Futbol
+        %h4
+        %p 1 puntos
+        %p.title novato
   #facebook-connect
   
   
