--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -366,6 +366,10 @@ a.register {
 	text-decoration:none;
 }
 
+#nexts-games li {
+       position:relative;
+}
+
 #nexts-games li.last {
 	margin-right:0;
 }
@@ -389,13 +393,22 @@ a.register {
   width:30px;	
 	}
 	
-#nexts-games li p{
-	line-height:42px;
-	height:42px;
-	float:right;
-	font-weight:bold;
-  width:40px;	
+/*#nexts-games li p{
+  line-height:42px;
+  height:42px;
+  float:right;
+  font-weight:bold;
+  width:40px; 
 }
+*/
+#nexts-games li p{
+       line-height:42px;
+       height:42px;
+       position: absolute;
+       right:8px;
+       font-weight:bold;
+}
+
 
 #most-predicted {
 	margin-top:22px;
