--- a/app/views/home/_news.html.haml
+++ b/app/views/home/_news.html.haml
@@ -1,7 +1,8 @@
 %li{:class=>(cycle("odd","even"))}
   %div
-    %img{:alt => "", :height => "92", :src => "/images/news-1.jpg", :width => "275"}/
+    = image_tag news.picture.url(:front)
     %a.plus{:href => "#"} +
   %p.alt= truncate(news.title,30)
   %p.date= l(news.published_at, :format=>:long)
   %p= truncate(news.content,100)
+m
