Updated layout for some IE fix

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -64,8 +64,8 @@
           #sidebar
             = yield :sidebar
           .clear
-      #footer
-        .wrapper
+          #footer
+      .bg_footer
       /[if IE] 
         :erb
           </div>
