--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -78,6 +78,7 @@
         %p.title novato
   #facebook
     %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=103970152982406&amp;width=292&amp;connections=10&amp;stream=false&amp;header=false&amp;height=255", :style => "border:none; overflow:hidden; width:292px; height:255px;"}
+    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=103970152982406&amp;width=292&amp;connections=10&amp;stream=false&amp;header=true", :style => "border:none; overflow:hidden; width:292; height:255"}
 
   
   
