Fixed Facebook widget

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -76,7 +76,7 @@
         %h4
         %p 1 puntos
         %p.title novato
-  #facebook
+  #facebook_likebox
     %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=292&amp;connections=10&amp;stream=false&amp;header=true", :style => "border:none; overflow:hidden; width:292; height:455"}
     %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=292&amp;connections=10&amp;stream=false&amp;header=true", :style => "border:none; overflow:hidden; width:292; height:455"}
 
