--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -77,8 +77,8 @@
         %p 1 puntos
         %p.title novato
   #facebook_likebox
-    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=292&amp;connections=10&amp;stream=false&amp;header=true", :style => "border:none; overflow:hidden; width:292; height:455"}
-    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=292&amp;connections=10&amp;stream=false&amp;header=true", :style => "border:none; overflow:hidden; width:292; height:455"}
+    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?profile=1&id=129238740437455&width=292&amp;connections=10&amp;stream=false&amp;header=true", :style => "border:none; overflow:hidden; width:292; height:455"}
+    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&width=292&amp;connections=10&amp;stream=false&amp;header=true", :style => "border:none; overflow:hidden; width:292; height:455"}
 
   
   
