--- a/app/views/registrations/_form.html.haml
+++ b/app/views/registrations/_form.html.haml
@@ -1,22 +1,17 @@
 - form_for resource_name, resource, :url => registration_path(resource_name) do |f| 
-  .content.box
-    .group
-      =f.label :email, "Correo Electrónico", :class=>"label"
-      =f.error_message_on :email
-      =f.text_field :email, :class => :text_field
+  =f.label :email, "Correo Electrónico", :class=>"label"
+  =f.error_message_on :email
+  =f.text_field :email, :class => :text_field
 
-    .group
-      =f.label :password, "Contraseña",:class=>"label"
-      =f.error_message_on :password
-      =f.password_field :password, :class => :password_field
+  =f.label :password, "Contraseña",:class=>"label"
+  =f.error_message_on :password
+  =f.password_field :password, :class => :password_field
 
-    .group
-      =f.label :password_confirmation, "Verifica tu contraseña", :class=>"label"
-      =f.error_message_on :password_confirmation
-      =f.password_field :password_confirmation, :class => :password_field
+  =f.label :password_confirmation, "Verifica tu contraseña", :class=>"label"
+  =f.error_message_on :password_confirmation
+  =f.password_field :password_confirmation, :class => :password_field
 
-    .group.navform.wat-cf
-      =f.submit "Registrarse", :class => :button
-      =f.submit "Cancelar", :onclick => "window.location='#{root_path}';return false", :class => :button
-      
-      = render :partial => "shared/devise_links" 
+  =f.submit "Registrarse", :class => "button submit"
+  =f.submit "Cancelar", :onclick => "window.location='#{root_path}';return false", :class => "button cancel"
+  
+  = render :partial => "shared/devise_links" 
