Disable for now Facebook posting

--- a/app/views/predictions/_form.haml
+++ b/app/views/predictions/_form.haml
@@ -47,8 +47,8 @@
   /   =f.text_field :scoring_player_id, :class => :text_field
 
   /.group
-    = #f.check_box :to_facebook, {}, true
-    = #f.label :to_facebook, "Publicar mi pronóstico en Facebook"
+  /  = #f.check_box :to_facebook, {}, true
+  /  = #f.label :to_facebook, "Publicar mi pronóstico en Facebook"
 
   .group.navform.wat-cf
     =f.submit "¡Pronosticar!", :class => :button
