--- a/app/views/predictions/_form.haml
+++ b/app/views/predictions/_form.haml
@@ -28,7 +28,7 @@
 
     #second_team.team.last{:rel=>@prediction.match.visitor.id, :class=>("selected" if @prediction.visitor_winner?)}
       = f.label :winner_id, @prediction.match.visitor.name, :class=>"team_name"
-      .flag.medium{:class=>prediction.match.visitor.flag_name}
+      .flag.medium{:class=>@prediction.match.visitor.flag_name}
 
       %a.small{:href => "#"} ¿Goles?
       .goals.hidden
