--- a/app/views/layouts/predictions.html.haml
+++ b/app/views/layouts/predictions.html.haml
@@ -2,7 +2,7 @@
 %html
   %head
     %title= [@title, "Patatoon"].compact.join(" | ")
-    = stylesheet_link_tag 'reset', '../javascripts/fancybox/jquery.fancybox-1.3.1','style'
+    = stylesheet_link_tag 'reset', '../javascripts/fancybox/jquery.fancybox-1.3.1','style','layout','flags'
   %body
     = yield :include
     #main= yield
