--- a/app/views/admin/posts/_form.html.haml
+++ b/app/views/admin/posts/_form.html.haml
@@ -1,8 +1,9 @@
 #post_form
   - semantic_form_for ["admin",@post] do |form|
     - form.inputs do
-      = form.input :title, :label => "Título"
-      = form.input :content, :label => "Contenido", :input_html => {:class => "tinymce"}
+      = form.input :title, :label => "Título"      
+      = form.input :picture, :label => "Foto portada"      
+      = form.input :content, :label => "Contenido", :input_html => {:class => "tinymce"}      
       = form.input :published_at, :label => "Fecha publicación"
       = form.input :admin, :label => "Autor"
   
