--- a/public/stylesheets/flags.css
+++ b/public/stylesheets/flags.css
@@ -122,6 +122,9 @@
 .gre.medium{
 	background:url(../images/flags/gre-medium.png) no-repeat;
 }
+.ury.medium {
+	background:url(../images/flags/ury-medium.png) no-repeat;
+}
 
 
 .rsa.medium {
