--- a/app/views/matches/index.haml
+++ b/app/views/matches/index.haml
@@ -22,12 +22,56 @@
               %td= "#{match.visitor.name} - #{match.second_team_goals || '--'}" if match.visitor
             
 - content_for :sidebar do
-
-  #ranking.block
-    %h2 Los que siempre aciertan
-
-    %h2 Los más rankeados
-
-  #featured_posts.block
-    %h2 Destacadas
-    .content_box Destacada
+  #invite
+    %h3
+      invita a
+      %br>/
+      tus amigos
+    %ul
+      %li.facebook
+        %a{:href => "#"}
+      %li.twitter
+        %a{:href => "#"}
+      %li.email
+        %a{:href => "#"}
+  #chunteros
+    %h3 los chunteros
+    %ul.ranking
+      %li
+        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
+        %h4= ""
+        %p 3 pronósticos
+        %p 0 aciertos
+        %p.title novato
+      %li
+        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
+        %h4= ""
+        %p 2 pronósticos
+        %p 0 aciertos
+        %p.title novato
+      %li
+        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
+        %h4= ""
+        %p 2 pronósticos
+        %p 0 aciertos
+        %p.title novato
+  #punteros
+    %h3 los punteros
+    %ul.ranking
+      %li
+        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
+        %h4
+        %p 3 puntos
+        %p.title novato
+      %li
+        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
+        %h4 
+        %p 2 puntos
+        %p.title novato
+      %li
+        %img.avatar{:alt => "", :height => "67", :src => "/images/avatar.jpg", :width => "67"}/
+        %h4
+        %p 1 puntos
+        %p.title novato
+  #facebook_likebox
+    %iframe{:allowtransparency => "true", :frameborder => "0", :scrolling => "no", :src => "http://www.facebook.com/plugins/likebox.php?id=129238740437455&amp;width=240&amp;connections=20&amp;stream=false&amp;header=false&amp;height=340", :style => "border:none; overflow:hidden; width:240px; height:340px;"}
