Updated padding on flags

--- a/app/views/home/_next_match.html.haml
+++ b/app/views/home/_next_match.html.haml
@@ -6,12 +6,12 @@
         = next_match.local.short_name
       .flag.small{:class=> next_match.visitor.flag_name, :title=>next_match.visitor.name}
         = next_match.visitor.short_name 
-      %p= distance_of_time_in_words_to_now(next_match.played_at).gsub "hace", ""
+      %p= (distance_of_time_in_words_to_now(next_match.played_at).gsub("hace", "")) #.split(" ").join("<br/>")
   - else
     %a{:href=>match_path(next_match)}
       .flag.small{:class=> next_match.local.flag_name, :title=>next_match.local.name}
         = next_match.local.short_name
       .flag.small{:class=> next_match.visitor.flag_name, :title=>next_match.visitor.name}
         = next_match.visitor.short_name
-      %p= distance_of_time_in_words_to_now(next_match.played_at).gsub "hace", ""
+      %p= (distance_of_time_in_words_to_now(next_match.played_at).gsub("hace", "")) #.split(" ").join("<br/>")
     
