--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -382,9 +382,9 @@ a.register {
 
 #nexts-games li a{
 	display:block;
-	width:178px;
+	width:182px;
 	height:100%;
-	padding:0 8px 0 12px;
+	padding:0 8px;
 	}
 
 #nexts-games li .flag {
@@ -392,7 +392,7 @@ a.register {
 	line-height:42px;
 	height:42px;
 	padding-left:36px;
-	width:36px;
+	width:30px;
 	background-position:left center;
 	text-transform:uppercase;
 	}
