Updated comment interface

--- a/app/views/comments/_comments_list.html.haml
+++ b/app/views/comments/_comments_list.html.haml
@@ -1,6 +1,9 @@
 #comments
   %h3{:style=>"font-size:2em;"}= "#{commentable.comments.size} comentarios"
   
+  %ul#comments_li
+    = render :partial => "comments/comment", :collection => commentable.comments
+  
 #comment_form
   
   - if commentable.comments.size.zero?
