Cleaded CSS file for flags

--- a/public/stylesheets/flags.css
+++ b/public/stylesheets/flags.css
@@ -7,151 +7,151 @@
 }
 
 .ury.small {
-	background:url(../images/flags/ury-small.png) no-repeat;
+	background:url(/images/flags/ury-small.png) no-repeat;
 }
 
 .fra.small {
-  background:url(../images/flags/fra-small.png) no-repeat;
+  background:url(/images/flags/fra-small.png) no-repeat;
 }
 
 .arg.small {
-	background:url(../images/flags/arg-small.png) no-repeat;
+	background:url(/images/flags/arg-small.png) no-repeat;
 }
 
 .nga.small {
-	background:url(../images/flags/nga-small.png) no-repeat;
+	background:url(/images/flags/nga-small.png) no-repeat;
 }
 .kro.small {
-	background:url(../images/flags/kro-small.png) no-repeat;
+	background:url(/images/flags/kro-small.png) no-repeat;
 }
 .gre.small {
-	background:url(../images/flags/gre-small.png) no-repeat;
+	background:url(/images/flags/gre-small.png) no-repeat;
 }
 .eng.small {
-	background:url(../images/flags/eng-small.png) no-repeat;
+	background:url(/images/flags/eng-small.png) no-repeat;
 }
 .usa.small {
-	background:url(../images/flags/usa-small.png) no-repeat;
+	background:url(/images/flags/usa-small.png) no-repeat;
 }
 .deu.small {
-	background:url(../images/flags/deu-small.png) no-repeat;
+	background:url(/images/flags/deu-small.png) no-repeat;
 }
 .aus.small {
-	background:url(../images/flags/aus-small.png) no-repeat;
+	background:url(/images/flags/aus-small.png) no-repeat;
 }
 .dza.small {
-	background:url(../images/flags/dza-small.png) no-repeat;
+	background:url(/images/flags/dza-small.png) no-repeat;
 }
 .svn.small {
-	background:url(../images/flags/svn-small.png) no-repeat;
+	background:url(/images/flags/svn-small.png) no-repeat;
 }
 .che.small {
-	background:url(../images/flags/che-small.png) no-repeat;
+	background:url(/images/flags/che-small.png) no-repeat;
 }
 .hnd.small {
-	background:url(../images/flags/hnd-small.png) no-repeat;
+	background:url(/images/flags/hnd-small.png) no-repeat;
 }
 .svk.small {
-	background:url(../images/flags/svk-small.png) no-repeat;
+	background:url(/images/flags/svk-small.png) no-repeat;
 }
 .ita.small {
-	background:url(../images/flags/ita-small.png) no-repeat;
+	background:url(/images/flags/ita-small.png) no-repeat;
 }
 .nzd.small {
-	background:url(../images/flags/nzd-small.png) no-repeat;
+	background:url(/images/flags/nzd-small.png) no-repeat;
 }
 .nzl.small {
-	background:url(../images/flags/nzl-small.png) no-repeat;
+	background:url(/images/flags/nzl-small.png) no-repeat;
 }
 
 .pry.small {
-	background:url(../images/flags/pry-small.png) no-repeat;
+	background:url(/images/flags/pry-small.png) no-repeat;
 }
 
 .srb.small {
-	background:url(../images/flags/srb-small.png) no-repeat;
+	background:url(/images/flags/srb-small.png) no-repeat;
 }
 .gha.small {
-	background:url(../images/flags/gha-small.png) no-repeat;
+	background:url(/images/flags/gha-small.png) no-repeat;
 }
 
 
 .nzl.medium {
-	background:url(../images/flags/nzl-medium.png) no-repeat;
+	background:url(/images/flags/nzl-medium.png) no-repeat;
 }
 
 .pry.medium {
-	background:url(../images/flags/pry-medium.png) no-repeat;
+	background:url(/images/flags/pry-medium.png) no-repeat;
 }
 
 .nzd.medium {
-	background:url(../images/flags/nzd-medium.png) no-repeat;
+	background:url(/images/flags/nzd-medium.png) no-repeat;
 }
 .svk.medium {
-	background:url(../images/flags/svk-medium.png) no-repeat;
+	background:url(/images/flags/svk-medium.png) no-repeat;
 }
 .ita.medium {
-	background:url(../images/flags/ita-medium.png) no-repeat;
+	background:url(/images/flags/ita-medium.png) no-repeat;
 }
 .che.medium {
-	background:url(../images/flags/che-medium.png) no-repeat;
+	background:url(/images/flags/che-medium.png) no-repeat;
 }
 .hnd.medium {
-	background:url(../images/flags/hnd-medium.png) no-repeat;
+	background:url(/images/flags/hnd-medium.png) no-repeat;
 }
 
 
 .dza.medium {
-	background:url(../images/flags/dza-medium.png) no-repeat;
+	background:url(/images/flags/dza-medium.png) no-repeat;
 }
 .svn.medium {
-	background:url(../images/flags/svn-medium.png) no-repeat;
+	background:url(/images/flags/svn-medium.png) no-repeat;
 }
 
 .deu.medium {
-	background:url(../images/flags/deu-medium.png) no-repeat;
+	background:url(/images/flags/deu-medium.png) no-repeat;
 }
 .aus.medium {
-	background:url(../images/flags/aus-medium.png) no-repeat;
+	background:url(/images/flags/aus-medium.png) no-repeat;
 }
 
 .eng.medium {
-	background:url(../images/flags/eng-medium.png) no-repeat;
+	background:url(/images/flags/eng-medium.png) no-repeat;
 }
 .usa.medium {
-	background:url(../images/flags/usa-medium.png) no-repeat;
+	background:url(/images/flags/usa-medium.png) no-repeat;
 }
 
 .kro.medium {
-	background:url(../images/flags/kro-medium.png) no-repeat;
+	background:url(/images/flags/kro-medium.png) no-repeat;
 }
 .gre.medium{
-	background:url(../images/flags/gre-medium.png) no-repeat;
+	background:url(/images/flags/gre-medium.png) no-repeat;
 }
 .ury.medium {
-	background:url(../images/flags/ury-medium.png) no-repeat;
+	background:url(/images/flags/ury-medium.png) no-repeat;
 }
 .srb.medium {
-	background:url(../images/flags/srb-medium.png) no-repeat;
+	background:url(/images/flags/srb-medium.png) no-repeat;
 }
 .gha.medium {
-	background:url(../images/flags/gha-medium.png) no-repeat;
+	background:url(/images/flags/gha-medium.png) no-repeat;
 }
 
 
 .rsa.medium {
-	background:url(../images/flags/rsa-medium.png) no-repeat;
+	background:url(/images/flags/rsa-medium.png) no-repeat;
 }
 
 .mex.medium {
-	background:url(../images/flags/mex-medium.png) no-repeat;
+	background:url(/images/flags/mex-medium.png) no-repeat;
 }
 
 .fra.medium {
-	background:url(../images/flags/fra-medium.png) no-repeat;
+	background:url(/images/flags/fra-medium.png) no-repeat;
 }
 
 
 .nga.medium {
-	background:url(../images/flags/nga-medium.png) no-repeat;
+	background:url(/images/flags/nga-medium.png) no-repeat;
 }
