Commented out line

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -17,7 +17,7 @@
       .post
         .body= simple_format(@post.content)
     
-%p= link_to 'Ver todas las entradas', posts_path
+%p=# link_to 'Ver todas las entradas', posts_path
 
 
 .clear            
