--- a/app/views/matches/index.haml
+++ b/app/views/matches/index.haml
@@ -1,26 +1,39 @@
-%h1 Mundial 2010
+- @body_class = "register home"
 
-- @groups.each do |group|
-  %h2= group.name
+%h2 
+  %span Viendo 
+  encuentros deportivo
 
-  .block
-    .content
-      %table.table.matches
-        %thead
-          %tr
-            %th.first Partido 
-            %th Fecha
-            %th Equipo
-            %th Equipo
-            %th.last="&nbsp;"
-        %tbody
+%h3= "Mundial Sudáfrica 2010"
+
+
+#groups_match
+
+  - unless account_signed_in?
+    = link_to "inicia sesión para dejar tu pronóstico",new_account_session_path, {:id=>"new_session"}    
+
+  #last-predicted
+    - @groups.each do |group|
+      %h2= group.name
+      %ul
+        %li{:class=>(cycle("odd","even"))}
           - group.matches.each do |match|
-            %tr{:class=>cycle("even","odd")}
-              %td=match.number
-              %td=l(match.played_at, :format=>:short)
-              %td= "#{match.local.name} - #{match.first_team_goals || '--'}" if match.local
-              %td= "#{match.visitor.name} - #{match.second_team_goals || '--'}" if match.visitor
+            %table{:cellpadding => "0", :cellspacing => "0"}
+              %tbody
+                %tr.header
+                  %td.first Partido
+                  %td
+                    .flag.small{:class=>match.local.flag_name}= match.local.short_name
+                  %td
+                    .flag.small{:class=>match.visitor.flag_name}= match.visitor.short_name
+                %tr
+                  %td.first goles
+                  %td{:class=>("win" if match.local_winner?)}= match.first_team_goals
+                  %td{:class=>("win" if match.visitor_winner?)}= match.second_team_goals
+            - if account_signed_in?
+              = link_to "deja tu pronóstico", match_prediction_path(@match), :class=>"predict button iframe"
             
+                  
 - content_for :sidebar do
   #invite
     %h3
