--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -64,7 +64,7 @@
             = yield :sidebar
           .clear
           #footer
-      .bg_footer
+      .bg-footer
       /[if IE] 
         :erb
           </div>
